# Counterfactually-Calibrated-Bayesian-Adapters-for-Reliable-Foundation-Model-

./: README.md
aistats/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  notebookf797675715.ipynb  pyproject.toml  requirements.txt  setup.py
aistats/configs/: ddp_2xa100.yaml  default.yaml  quick_test.yaml
aistats/notebooks/: demo.py
aistats/scripts/: eval.py  train.py
aistats/src/c2ba/: __init__.py  data.py  losses.py  models.py  trainer.py  utils.py
