[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c2ba"
version = "1.0.0"
description = "Counterfactually-Calibrated Bayesian Adapter: Neural Darwinism in Multimodal AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Neural Darwinism Research Team", email = "research@example.com"}
]
maintainers = [
    {name = "Neural Darwinism Research Team", email = "research@example.com"}
]
keywords = [
    "machine learning",
    "bayesian neural networks", 
    "distribution shift",
    "calibration",
    "uncertainty quantification",
    "neural darwinism",
    "multimodal ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "PyYAML>=6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0"
]
experiment = [
    "wandb>=0.15.0",
    "optuna>=3.0.0",
    "hydra-core>=1.3.0",
    "plotly>=5.0.0",
    "rich>=12.0.0"
]
all = [
    "c2ba[dev,experiment]"
]

[project.urls]
Homepage = "https://github.com/neural-darwinism/c2ba"
Repository = "https://github.com/neural-darwinism/c2ba"
Documentation = "https://github.com/neural-darwinism/c2ba#readme"
"Bug Tracker" = "https://github.com/neural-darwinism/c2ba/issues"

[project.scripts]
c2ba-train = "scripts.train:main"
c2ba-eval = "scripts.eval:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
c2ba = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "scipy.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "tqdm.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]
